--- a/env.yml
+++ b/env.yml
@@ -135,6 +135,8 @@ dependencies:
   - zeromq=4.3.4=h9c3ff4c_1
   - zipp=3.6.0=pyhd8ed1ab_0
   - zlib=1.2.11=h36c2ea0_1013
+  - pandas
+  - seaborn
   - pip:
     - cycler==0.10.0
     - japanize-matplotlib==1.1.3
