--- a/environment.yml
+++ b/environment.yml
@@ -138,7 +138,7 @@ dependencies:
   - pandas
   - seaborn
   - pixiedust
-  - java-jre
+  - -c cyclus java-jre
   - pip:
       - pandas
       - seaborn
